--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: MHadaptive
 Type: Package
 Title: General Markov Chain Monte Carlo for Bayesian Inference using
         adaptive Metropolis-Hastings sampling
-Version: 1.1-2
+Version: 1.1-3
 Date: 2011-04-03
 Author: Corey Chivers
 Maintainer: Corey Chivers <corey.chivers@mail.mcgill.ca>
-Depends: QRMlib
+Depends: QRMlib, compiler, R (>= 2.13.0)
 Description: Performs general Metropolis-Hastings Markov Chain Monte
         Carlo sampling of a user defined function which returns the
         un-normalized value (likelihood times prior) of a Bayesian
@@ -18,6 +18,6 @@ Description: Performs general Metropolis-Hastings Markov Chain Monte
         calculation.
 License: GPL (>= 3)
 LazyLoad: yes
-Packaged: 2011-08-04 14:32:53 UTC; cchivers
+Packaged: 2011-10-15 14:32:53 UTC; cchivers
 Repository: CRAN
-Date/Publication: 2011-08-04 16:30:26
+Date/Publication: 2011-10-15 14:35:30
